# denison-snake-programming-competition

./: .gitignore  CMakeBotCompile.txt  CMakeLists.txt  CMakeTournament.txt  CONTRIBUTING.md  Doxyfile  README.md  build-docs.sh  shell.nix
.github/: pull_request_template.md
CMakeLists/: CMakeGoogleTest.txt
docs/: annotated.html  cell_8h.html  cell_8h.js  cell_8h_source.html  classEvilBot-members.html  classEvilBot.html  classEvilBot.js  classGrid.html  classGrid.js  classMyBot-members.html  classMyBot.html  classMyBot.js  classPos-members.html  classPos.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  direction_8h.html  direction_8h.js  direction_8h_source.html  doxygen_crawl.html  evil__bot_8h_source.html  files.html  functions.html  functions_func.html  game__settings_8h_source.html  globals.html  globals_enum.html  grid_8h.html  grid_8h_source.html  hierarchy.html  index.html  md_README.html  md_documentation_2COMPILING.html  md_documentation_2GAME__MANUAL.html  my__bot_8h_source.html  navtreedata.js  navtreeindex0.js  pages.html  pos_8h_source.html
docs/html/: annotated.html  annotated_dup.js  cell_8h_source.html  classEvilBot-members.html  classEvilBot.html  classEvilBot.js  classGrid-members.html  classGrid.html  classMyBot-members.html  classMyBot.html  classMyBot.js  classPos-members.html  classPos.html  classPos.js  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  direction_8h.html  doxygen_crawl.html  evil__bot_8h_source.html  files.html  functions.html  functions_func.html  game__settings_8h_source.html  globals_enum.html  grid_8h.html  grid_8h.js  grid_8h_source.html  hierarchy.html  hierarchy.js  index.html  index.js  md_README.html  md_documentation_2COMPILING.html  (+6 more)
documentation/: COMPILING.md  CONTRIBUTING.md  GAME_MANUAL.md
src/: bot.h  cell.h  cells.cpp  cells.h  compute_game_logic.cpp  compute_game_logic.h  create_from_segments.cpp  create_from_segments.h  direction.cpp  direction.h  draw_cells.cpp  draw_cells.h  draw_grid.cpp  draw_grid.h  evil_bot.cpp  evil_bot.h  game_settings.h  grid.cpp  grid.h  main.cpp  my_bot.cpp  my_bot.h  pos.cpp  pos.h  space.cpp  space.h  util.cpp
submitted-bots/: apex-fly.cpp  bfs-gemini.cpp  joel-jr-fetus-j.cpp  little-fruit-freak.cpp
(+165 files in other folders)
